# blog_os

./: .gitignore  Cargo.toml  run.py  x86_64-blog_os.json
PonchoOS/gnu-efi/bootloader/: main.c
PonchoOS/gnu-efi/x86_64/apps/: AllocPages.efi  FreePages.efi  bltgrid.efi  debughook.efi  debughook.efi.debug  drv0.efi  drv0_use.efi  exit.efi  lfbgrid.efi  modelist.efi  printenv.efi  route80h.efi  setdbg.efi  setjmp.efi  t.efi  t2.efi  t3.efi  t4.efi  t5.efi  t6.efi  t7.efi  t8.efi  tcc.efi  unsetdbg.efi
PonchoOS/gnu-efi/x86_64/bootloader/: main.efi  main.efi.custom
bootloader/: Cargo.toml  build.py
bootloader/.cargo/: config.toml
bootloader/src/: elf.rs  main.rs
src/: font.psf  main.rs
src/utils/: framebuffer.rs  gdt.rs  mod.rs
src/utils/interrupts/: handlers.rs  idt.rs  mod.rs
