[package]
name = "blog_os"
version = "0.1.0"
authors = ["Noah Klayman <noahklayman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
spin = "0.9.1"
conquer-once = {version = "0.3.2", default-features = false}
x86_64 = "0.14.3"
bit_field = "0.10.1"
bitflags = "1.2.1"

[workspace]
members = ["bootloader"]